--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js",
+    "start-server": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/pfsuarez/udemy_nodejs/issues"
   },
-  "homepage": "https://github.com/pfsuarez/udemy_nodejs#readme"
+  "homepage": "https://github.com/pfsuarez/udemy_nodejs#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  }
 }
