--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "homepage": "https://github.com/pfsuarez/udemy_nodejs#readme",
   "devDependencies": {
     "nodemon": "^2.0.7"
+  },
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1"
   }
 }
