--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "mongodb": "^3.6.7",
+    "mongoose": "^5.12.11",
     "mysql2": "^2.2.5",
     "pug": "^3.0.2",
     "sequelize": "^6.6.2"
