--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "express-session": "^1.17.2",
+    "express-validator": "^6.11.1",
     "mongodb": "^3.6.7",
     "mongoose": "^5.12.11",
     "mysql2": "^2.2.5",
