--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express-validator": "^6.11.1",
     "mongodb": "^3.6.7",
     "mongoose": "^5.12.11",
+    "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "pug": "^3.0.2",
     "sequelize": "^6.6.2"
