--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mongoose": "^5.12.11",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
+    "pdfkit": "^0.12.1",
     "pug": "^3.0.2",
     "sequelize": "^6.6.2"
   }
