--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mysql2": "^2.2.5",
     "pdfkit": "^0.12.1",
     "pug": "^3.0.2",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.2",
+    "stripe": "^8.154.0"
   }
 }
