--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "pdfkit": "^0.12.1",
     "pug": "^3.0.2",
     "sequelize": "^6.6.2",
-    "stripe": "^8.154.0"
+    "stripe": "^8.154.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
