--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "pdfkit": "^0.12.1",
     "pug": "^3.0.2",
     "sequelize": "^6.6.2",
+    "socket.io": "^4.1.2",
     "stripe": "^8.154.0",
     "uuid": "^8.3.2"
   },
