--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js",
-    "start-server": "node app.js"
+    "start": "SET NODE_ENV=production&& SET MONGO_USER=USE_YOUR_USER&& SET MONGO_PASSWORD=USE_YOUR_PASSWORD &&MONGO_DEFAULT_DB=USE_YOUR_DB&& SET STRIPE_KEY=USE_YOUR_KEY&& node app.js",
+    "start-server": "node app.js",
+    "start:dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
