--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-handlebars": "^5.3.2",
     "express-session": "^1.17.2",
     "express-validator": "^6.11.1",
+    "helmet": "^4.6.0",
     "mongodb": "^3.6.7",
     "mongoose": "^5.12.11",
     "multer": "^1.4.2",
