--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "helmet": "^4.6.0",
     "mongodb": "^3.6.7",
     "mongoose": "^5.12.11",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "pdfkit": "^0.12.1",
