--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "chai": "^4.3.4",
+    "mocha": "^9.0.0",
+    "nodemon": "^2.0.7",
+    "sinon": "^11.1.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --timeout 5000",
     "start": "nodemon app.js"
   },
   "repository": {
