--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "csurf": "^1.11.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
     "express-handlebars": "^5.3.2",
     "express-session": "^1.17.2",
     "express-validator": "^6.11.1",
+    "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.7",
     "mongoose": "^5.12.11",
