--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "sequelize": "^6.6.2",
     "socket.io": "^4.1.2",
     "stripe": "^8.154.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
